# clean_bank

./: .flake8  .pre-commit-config.yaml  .pylintrc  Dockerfile  alembic.ini  docker-compose.yaml  mypy.ini  pyproject.toml
.github/workflows/: test.yml
src/: __main__.py
src/adapters/db/: config.py  converters.py  exception_mapper.py  main.py  uow.py
src/adapters/db/dao/: account.py  base.py  customer.py
src/adapters/db/migrations/: env.py
src/adapters/db/migrations/versions/: 055b35dc8d2f_added_tables.py  2c4d3851de7b_update.py  42f464647a3a_update.py  54ce19affe89_update.py  8bc61624c0fc_update_tables.py  (+6 more)
src/adapters/db/models/: __init__.py  account.py  base.py  customer.py  transaction.py
src/core/account/: exceptions.py
src/core/account/dto_account/: __init__.py  account.py
src/core/account/interfaces/: dao.py
src/core/account/services/: __init__.py  create_account.py  delete_account.py  get_account.py  get_all_accounts.py  update_account.py
src/core/common/exceptions/: base.py  dao.py
src/core/customer/: exceptions.py
src/core/customer/dto/: __init__.py  customer.py
src/core/customer/interfaces/: dao.py
src/core/customer/services/: __init__.py  create_customer.py  delete_customer.py  get_all_customers.py  get_customer.py  update_customer.py
src/presentation/api/: __main__.py  lifespan.py  main.py
src/presentation/api/controllers/: account.py  customer.py  exceptions.py  main.py  root.py
src/presentation/api/di/: main.py
src/presentation/api/settings/: config.py  extractor.py
tests/integration/api/: test_post.py
(+7 files in other folders)
