[tool.poetry]
name = "bank-app"
version = "0.1.0"
description = ""
authors = ["batyr <mansurmekin@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/MansurMekin/clean_bank"
repository = "https://github.com/MansurMekin/clean_bank"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.97.0"
sqlalchemy = "^2.0.18"
uvicorn = "^0.22.0"
orjson = "^3.9.2"
alembic = "^1.11.1"
asyncpg = "^0.28.0"
python-dotenv = "^1.0.0"
httpx = "^0.24.1"


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.2"


[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"
pytest-asyncio = "^0.20.3"


[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
pylint = "^2.17.4"
mypy = "^1.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
black = "^23.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
